[gd_scene load_steps=2 format=3 uid="uid://cqba6qys75ste"]

[ext_resource type="Script" path="res://UI.gd" id="1_ba8qr"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ba8qr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealth" type="Label" parent="CanvasLayer"]
offset_left = 825.0
offset_top = 617.0
offset_right = 898.0
offset_bottom = 640.0

[node name="MonsterHealth" type="Label" parent="CanvasLayer"]
offset_left = 165.0
offset_top = 78.0
offset_right = 205.0
offset_bottom = 101.0

[node name="PassTurn" type="Button" parent="CanvasLayer"]
offset_left = 893.0
offset_top = 526.0
offset_right = 974.0
offset_bottom = 564.0

[connection signal="pressed" from="CanvasLayer/PassTurn" to="." method="_on_pass_turn_pressed"]
